--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
         "@sveltejs/kit": "^1.15.8",
         "@typescript-eslint/eslint-plugin": "^5.59.1",
         "@typescript-eslint/parser": "^5.59.1",
+        "date-fns": "^2.29.3",
         "eslint": "^8.39.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "houdini": "^1.2.2",
+        "houdini-svelte": "^1.2.2",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
         "svelte": "^3.58.0",
         "svelte-check": "^3.2.0",
         "tslib": "^2.5.0",
         "typescript": "^5.0.4",
-        "vite": "^4.3.2",
-        "houdini": "^1.2.2",
-        "houdini-svelte": "^1.2.2"
+        "vite": "^4.3.2"
     },
     "type": "module"
 }
