--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"date-fns": "^2.29.3",
+		"ds-svelte": "github:nais/ds-svelte",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
