--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@nais/ds-svelte": "^0.0.3",
+		"@navikt/ds-css": "^2.9.8",
 		"@sveltejs/adapter-auto": "^2.0.1",
 		"@sveltejs/kit": "^1.15.9",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
