--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
+		"svelte-copy": "^1.3.2",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.3.3"
