--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@nais/ds-svelte": "^0.0.6",
 		"@navikt/ds-css": "^2.9.8",
 		"@sveltejs/adapter-auto": "^2.0.1",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.15.9",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
