feat(tenantDomain): Add tenantdomain from env var
Co-authored-by: Thomas Krampl <thomas.siegfried.krampl@nav.no>
Co-authored-by: Roger Bjørnstad <roger.bjornstad@nav.no>
Co-authored-by: Johnny Horvi <johnny@horvi.no>

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -16,6 +16,9 @@ spec:
     spec:
       containers:
         - name: "{{ .Chart.Name }}"
+          env: 
+            - name: "TENANT_DOMAIN"
+              value: "{{ .Values.tenantDomain }}"
           securityContext:
             capabilities:
               drop:
