--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,5 +1,5 @@
 image:
   repository: europe-north1-docker.pkg.dev/nais-io/nais/images
   name: console-frontend
-host: ""
-tenantDomain: ""
+host: ''
+tenantDomain: ''
