--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -1,19 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: "{{ .Release.Name }}"
+  name: '{{ .Release.Name }}'
   namespace: nais-system
 spec:
   ingressClassName: nais-ingress-iap
   rules:
-  - host: "{{ .Values.host }}"
-    http:
-      paths:
-      - backend:
-          service:
-            name: "{{ .Release.Name }}"
-            port:
-              number: 80
-        path: /
-        pathType: Prefix
-
+    - host: '{{ .Values.host }}'
+      http:
+        paths:
+          - backend:
+              service:
+                name: '{{ .Release.Name }}'
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
