--- a/charts/templates/networkpolicy.yaml
+++ b/charts/templates/networkpolicy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: "{{ .Release.Name }}"
+  name: '{{ .Release.Name }}'
 spec:
   egress:
     - to:
@@ -15,6 +15,6 @@ spec:
               app: console-backend
   podSelector:
     matchLabels:
-      app: "{{ .Release.Name }}"
+      app: '{{ .Release.Name }}'
   policyTypes:
     - Egress
