--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Release.Name }}"
+  name: '{{ .Release.Name }}'
 spec:
   type: ClusterIP
   ports:
@@ -10,4 +10,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: "{{ .Release.Name }}"
+    app: '{{ .Release.Name }}'
