--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 engine-strict=true
-@nais:registry=https://npm.pkg.github.com
+@nais:registry=https://europe-north1-npm.pkg.dev/nais-io/nais-public-npm/
