--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@nais/ds-svelte": "^0.1.5",
+		"@nais/ds-svelte-community": "^0.1.9",
 		"@navikt/ds-css": "^3.4.2",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.2.4",
@@ -20,7 +20,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
 		"date-fns": "^2.30.0",
-		"ds-svelte": "github:nais/ds-svelte",
 		"eslint": "^8.41.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
