--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"typescript": "^5.1.3",
 		"vite": "^4.3.9"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"cronstrue": "^2.27.0"
+	}
 }
