--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.20.1",
+		"@types/amplitude-js": "^8.16.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
 		"date-fns": "^2.30.0",
@@ -36,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"amplitude-js": "^8.21.9",
 		"cronstrue": "^2.27.0"
 	}
 }
