--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "dashboard3",
+	"name": "console-frontend",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,32 +12,32 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@nais/ds-svelte-community": "^0.1.9",
-		"@navikt/ds-css": "^3.4.2",
+		"@nais/ds-svelte-community": "^0.2.1",
+		"@navikt/ds-css": "^4.7.2",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.20.1",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.22.4",
 		"@types/amplitude-js": "^8.16.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.8",
-		"@typescript-eslint/parser": "^5.59.8",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"@typescript-eslint/parser": "^6.2.1",
 		"date-fns": "^2.30.0",
-		"eslint": "^8.41.0",
-		"eslint-config-prettier": "^8.8.0",
+		"eslint": "^8.46.0",
+		"eslint-config-prettier": "^8.9.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"houdini": "^1.2.5",
-		"houdini-svelte": "^1.2.5",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.3",
-		"svelte-copy": "^1.3.2",
-		"tslib": "^2.5.2",
-		"typescript": "^5.1.3",
-		"vite": "^4.3.9"
+		"houdini": "^1.2.8",
+		"houdini-svelte": "^1.2.8",
+		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.1.2",
+		"svelte-check": "^3.4.6",
+		"svelte-copy": "^1.4.1",
+		"tslib": "^2.6.1",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.7"
 	},
 	"type": "module",
 	"dependencies": {
 		"amplitude-js": "^8.21.9",
-		"cronstrue": "^2.27.0"
+		"cronstrue": "^2.28.0"
 	}
 }
