styling of log page

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -3,3 +3,5 @@ name: console-frontend
 description: Frontend for NAIS console
 type: application
 version: 1.0.0
+sources:
+  - https://github.com/nais/console-frontend/tree/main/charts
