--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"amplitude-js": "^8.21.9",
-		"cronstrue": "^2.31.0"
+		"cronstrue": "^2.31.0",
+		"graphql-sse": "^2.2.1"
 	}
 }
