--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@nais/ds-svelte-community": "^0.5.2",
+		"@nais/ds-svelte-community": "^0.5.3",
 		"@nais/ds-svelte-community-preprocess-svelte": "^0.5.1",
-		"@navikt/ds-css": "^5.5.0",
+		"@navikt/ds-css": "^5.6.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.25.1",
 		"@types/amplitude-js": "^8.16.3",
-		"@typescript-eslint/eslint-plugin": "^6.7.3",
-		"@typescript-eslint/parser": "^6.7.3",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
 		"date-fns": "^2.30.0",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.33.2",
-		"houdini": "^1.2.13",
-		"houdini-svelte": "^1.2.13",
+		"houdini": "^1.2.25",
+		"houdini-svelte": "^1.2.25",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.9"
+		"vite": "^4.4.10"
 	},
 	"type": "module",
 	"dependencies": {
 		"amplitude-js": "^8.21.9",
 		"cronstrue": "^2.32.0",
+		"echarts": "^5.4.3",
 		"graphql": "^16.8.1",
 		"graphql-sse": "^2.3.0"
 	}
