--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: '{{ .Release.Name }}'
   namespace: nais-system
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
 spec:
   ingressClassName: nais-ingress-iap
   rules:
