--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"cronstrue": "^2.41.0",
 		"echarts": "^5.4.3",
 		"graphql": "^16.8.1",
-		"graphql-sse": "^2.3.0"
+		"graphql-sse": "^2.3.0",
+		"pretty-bytes": "^6.1.1"
 	}
 }
