--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"amplitude-js": "^8.21.9",
+		"bytes-iec": "^3.1.1",
 		"cronstrue": "^2.41.0",
 		"echarts": "^5.4.3",
 		"graphql": "^16.8.1",
