--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@nais/ds-svelte-community": "^0.5.3",
+		"@nais/ds-svelte-community": "^0.6.0",
 		"@nais/ds-svelte-community-preprocess-svelte": "^0.5.1",
-		"@navikt/ds-css": "^5.7.6",
-		"@sveltejs/adapter-auto": "^2.1.0",
+		"@navikt/ds-css": "^5.10.0",
+		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.27.0",
-		"@types/amplitude-js": "^8.16.4",
-		"@typescript-eslint/eslint-plugin": "^6.9.0",
-		"@typescript-eslint/parser": "^6.9.0",
+		"@sveltejs/kit": "^1.27.4",
+		"@types/amplitude-js": "^8.16.5",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
 		"date-fns": "^2.30.0",
-		"eslint": "^8.52.0",
+		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.34.0",
-		"houdini": "^1.2.31",
-		"houdini-svelte": "^1.2.31",
+		"eslint-plugin-svelte": "^2.35.0",
+		"houdini": "^1.2.33",
+		"houdini-svelte": "^1.2.33",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.2.2",
@@ -39,9 +39,11 @@
 	"type": "module",
 	"dependencies": {
 		"amplitude-js": "^8.21.9",
+		"bytes-iec": "^3.1.1",
 		"cronstrue": "^2.41.0",
 		"echarts": "^5.4.3",
 		"graphql": "^16.8.1",
-		"graphql-sse": "^2.3.0"
+		"graphql-sse": "^2.3.0",
+		"pretty-bytes": "^6.1.1"
 	}
 }
