--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
 spec:
-  ingressClassName: nais-ingress-iap
+  ingressClassName: nais-ingress
   rules:
     - host: '{{ .Values.host }}'
       http:
