--- a/charts/templates/networkpolicy.yaml
+++ b/charts/templates/networkpolicy.yaml
@@ -12,7 +12,7 @@ spec:
     - to:
         - podSelector:
             matchLabels:
-              app: console-backend
+              app: nais-api
   podSelector:
     matchLabels:
       app: '{{ .Release.Name }}'
