--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -6,7 +6,7 @@ spec:
   type: ClusterIP
   ports:
     - port: 80
-      targetPort: 3000
+      targetPort: http
       protocol: TCP
       name: http
   selector:
