add redirect for the old teams url

--- a/charts/Feature.yaml
+++ b/charts/Feature.yaml
@@ -7,6 +7,12 @@ values:
       template: '{{ subdomain . "console" }}'
     config:
       type: string
+  teamsHost:
+    displayName: host for the old teams frontend, used to set up redirect
+    computed:
+      template: '{{ subdomain . "teams" }}'
+    config:
+      type: string
   tenantDomain:
     computed:
       template: '{{ subdomain . "" }}'
