--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -2,4 +2,5 @@ image:
   repository: europe-north1-docker.pkg.dev/nais-io/nais/images
   name: console-frontend
 host: ''
+teamsHost: ''
 tenantDomain: ''
