--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,6 +1,10 @@
 image:
   repository: europe-north1-docker.pkg.dev/nais-io/nais/images
   name: console-frontend
-host: ''
-teamsHost: ''
-tenantDomain: ''
+host: ""
+teamsHost: ""
+tenantDomain: ""
+
+fasit:
+  tenant:
+    name: ""
