--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"svelte-check": "^3.8.6",
 		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.3.0",
 		"vite": "^5.4.2",
 		"vitest": "^2.0.5"
 	},
