--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
 		"@nais/ds-svelte-community": "^0.7.5",
 		"@nais/ds-svelte-community-preprocess-svelte": "^0.7.5",
 		"@navikt/ds-css": "^6.16.2",
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/adapter-node": "^5.2.2",
-		"@sveltejs/kit": "^2.5.24",
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/adapter-node": "^5.2.5",
+		"@sveltejs/kit": "^2.6.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/amplitude-js": "^8.16.5",
-		"@typescript-eslint/eslint-plugin": "^8.3.0",
-		"@typescript-eslint/parser": "^8.3.0",
-		"date-fns": "^3.6.0",
-		"eslint": "^9.9.1",
+		"@typescript-eslint/eslint-plugin": "^8.8.0",
+		"@typescript-eslint/parser": "^8.8.0",
+		"date-fns": "^4.1.0",
+		"eslint": "^9.11.1",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"houdini": "^1.2.56",
-		"houdini-svelte": "^1.2.56",
+		"eslint-plugin-svelte": "^2.44.1",
+		"houdini": "^1.2.62",
+		"houdini-svelte": "^1.2.62",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.8.6",
+		"prettier-plugin-svelte": "^3.2.7",
+		"svelte": "4.2.19",
+		"svelte-check": "^4.0.4",
 		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"typescript-eslint": "^8.3.0",
-		"vite": "^5.4.2",
-		"vitest": "^2.0.5"
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.8.0",
+		"vite": "^5.4.8",
+		"vitest": "^2.1.1"
 	},
 	"type": "module",
 	"dependencies": {
