--- a/charts/templates/secret.yaml
+++ b/charts/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Release.Name }}"
+  name: '{{ .Release.Name }}'
   labels:
-    app: "{{ .Release.Name }}"
+    app: '{{ .Release.Name }}'
 type: Opaque
 stringData:
-  SLACK_FEEDBACK_CHANNEL_ID: {{ .Values.slack.feedbackChannel | quote }}
-  SLACK_API_TOKEN: {{ .Values.slack.token | quote }}
+  SLACK_FEEDBACK_CHANNEL_ID: '{{ .Values.slack.feedbackChannel | quote }}'
+  SLACK_API_TOKEN: '{{ .Values.slack.token | quote }}'
