--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -21,6 +21,8 @@ spec:
               value: '{{ .Values.tenantDomain }}'
             - name: 'TENANT_NAME'
               value: '{{ .Values.fasit.tenant.name }}'
+            - name: 'GITHUB_ORGANIZATION'
+              value: '{{ .Values.gitHub.organization }}'
           envFrom:
             - secretRef:
                 name: '{{ .Release.Name }}'
