--- a/charts/templates/fqdn.yaml
+++ b/charts/templates/fqdn.yaml
@@ -1,17 +1,17 @@
 apiVersion: networking.gke.io/v1alpha3
 kind: FQDNNetworkPolicy
 metadata:
-  name: {{ .Release.Name }}-fqdn
+  name: '{{ .Release.Name }}-fqdn'
 spec:
   egress:
-  - ports:
-    - port: 443
-      protocol: TCP
-    to:
-    - fqdns:
-      - slack.com
+    - ports:
+        - port: 443
+          protocol: TCP
+      to:
+        - fqdns:
+            - slack.com
   podSelector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: '{{ .Release.Name }}'
   policyTypes:
-  - Egress
+    - Egress
