--- a/charts/templates/secret.yaml
+++ b/charts/templates/secret.yaml
@@ -6,5 +6,5 @@ metadata:
     app: '{{ .Release.Name }}'
 type: Opaque
 stringData:
-  SLACK_FEEDBACK_CHANNEL_ID: '{{ .Values.slack.feedbackChannel | quote }}'
-  SLACK_API_TOKEN: '{{ .Values.slack.token | quote }}'
+  SLACK_FEEDBACK_CHANNEL_ID: '{{ .Values.slack.feedbackChannel }}'
+  SLACK_API_TOKEN: '{{ .Values.slack.token }}'
