--- a/package.json
+++ b/package.json
@@ -14,43 +14,45 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@nais/ds-svelte-community": "^0.7.5",
-		"@nais/ds-svelte-community-preprocess-svelte": "^0.7.5",
-		"@navikt/ds-css": "^6.16.2",
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/adapter-node": "^5.2.2",
-		"@sveltejs/kit": "^2.5.24",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@nais/ds-svelte-community": "^1.0.0-next.0",
+		"@nais/ds-svelte-community-preprocess-svelte": "^1.0.0-next.0",
+		"@navikt/ds-css": "^7.6.0",
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/kit": "^2.9.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.1",
 		"@types/amplitude-js": "^8.16.5",
-		"@typescript-eslint/eslint-plugin": "^8.3.0",
-		"@typescript-eslint/parser": "^8.3.0",
-		"date-fns": "^3.6.0",
-		"eslint": "^9.9.1",
+		"@typescript-eslint/eslint-plugin": "^8.17.0",
+		"@typescript-eslint/parser": "^8.17.0",
+		"date-fns": "^4.1.0",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"houdini": "^1.2.56",
-		"houdini-svelte": "^1.2.56",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.8.6",
-		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"typescript-eslint": "^8.3.0",
-		"vite": "^5.4.2",
-		"vitest": "^2.0.5"
+		"eslint-plugin-svelte": "^2.46.1",
+		"houdini": "^1.3.1",
+		"houdini-svelte": "^2.0.1",
+		"prettier": "^3.4.1",
+		"prettier-plugin-svelte": "^3.3.2",
+		"svelte": "^5.4.0",
+		"svelte-check": "^4.1.0",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.17.0",
+		"vite": "^6.0.2",
+		"vitest": "^2.1.8"
 	},
 	"type": "module",
 	"dependencies": {
 		"@slack/types": "^2.14.0",
-		"@slack/web-api": "^7.6.0",
+		"@slack/web-api": "^7.7.0",
 		"amplitude-js": "^8.21.9",
 		"bytes-iec": "^3.1.1",
-		"cronstrue": "^2.50.0",
+		"cronstrue": "^2.52.0",
 		"echarts": "^5.5.1",
 		"graphql": "^16.9.0",
 		"graphql-sse": "^2.5.3",
 		"pretty-bytes": "^6.1.1",
 		"svelte-floating-ui": "^1.5.9"
+	},
+	"overrides": {
+		"vite": "$vite"
 	}
 }
