--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: nais-system
   annotations:
     nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Robots-Tag: noindex";
 spec:
   ingressClassName: nais-ingress
   rules:
