--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.15.2",
 		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@types/amplitude-js": "^8.16.5",
+		"@types/luxon": "^3.4.2",
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
 		"date-fns": "^4.1.0",
@@ -44,10 +45,12 @@
 		"@slack/web-api": "^7.8.0",
 		"amplitude-js": "^8.21.9",
 		"bytes-iec": "^3.1.1",
+		"cron-parser": "^4.9.0",
 		"cronstrue": "^2.52.0",
 		"echarts": "^5.6.0",
 		"graphql": "^16.10.0",
 		"graphql-sse": "^2.5.3",
+		"luxon": "^3.5.0",
 		"pretty-bytes": "^6.1.1",
 		"svelte-floating-ui": "^1.5.9",
 		"svelte-highlight": "^7.8.2"
