feat: make ingress class configurable

--- a/charts/Feature.yaml
+++ b/charts/Feature.yaml
@@ -1,6 +1,11 @@
 environmentKinds:
   - management
 values:
+  ingressClass:
+    displayName: Ingress class
+    description: Ingress class
+    config:
+      type: string
   host:
     displayName: hostname override
     computed:
