--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "X-Robots-Tag: noindex";
 spec:
-  ingressClassName: nais-ingress
+  ingressClassName: '{{ .Values.ingressClass }}'
   rules:
     - host: '{{ .Values.host }}'
       http:
