--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.4",
+		"@eslint/compat": "^1.2.6",
 		"@nais/ds-svelte-community": "^1.0.0-next.22",
 		"@navikt/ds-css": "^7.12.0",
 		"@storybook/addon-essentials": "^8.5.5",
@@ -73,10 +74,5 @@
 		"@sveltejs/kit": {
 			"cookie": "^0.7.0"
 		}
-	},
-	"eslintConfig": {
-		"extends": [
-			"plugin:storybook/recommended"
-		]
 	}
 }
