feat: add liveness and readiness probes to deployment configuration

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -47,3 +47,22 @@ spec:
               memory: 32Mi
             limits:
               memory: 512Mi
+          livenessProbe:
+            httpGet:
+              path: /isAlive
+              port: http
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /isReady
+              port: http
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 6
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
