--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"cron-parser": "^4.9.0",
 		"cronstrue": "^2.54.0",
 		"echarts": "^5.6.0",
+		"eslint-plugin-unicorn": "^57.0.0",
 		"graphql": "^16.10.0",
 		"graphql-sse": "^2.5.4",
 		"luxon": "^3.5.0",
