NAIS -> Nais. Remove please, please. Job run failed warning on job page

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: console-frontend
-description: Frontend for NAIS console
+description: Frontend for Nais console
 type: application
 version: 2024-02-13-104003-46227aa
 sources:
