comment out OpenTelemetry environment variables in deployment.yaml

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -23,18 +23,18 @@ spec:
               value: '{{ .Values.fasit.tenant.name }}'
             - name: 'GITHUB_ORGANIZATION'
               value: '{{ .Values.gitHub.organization }}'
-            - name: 'OTEL_TRACES_EXPORTER'
-              value: 'otlp'
-            - name: 'OTEL_METRICS_EXPORTER'
-              value: 'otlp'
-            - name: 'OTEL_LOGS_EXPORTER'
-              value: 'otlp'
-            - name: 'NODE_OPTIONS'
-              value: '--require @opentelemetry/auto-instrumentations-node/register'
-            - name: 'OTEL_RESOURCE_ATTRIBUTES'
-              value: 'service.instance.id=console-frontend'
-            - name: 'OTEL_NODE_RESOURCE_DETECTORS'
-              value: 'env,host,os'
+            # - name: 'OTEL_TRACES_EXPORTER'
+            #   value: 'otlp'
+            # - name: 'OTEL_METRICS_EXPORTER'
+            #   value: 'otlp'
+            # - name: 'OTEL_LOGS_EXPORTER'
+            #   value: 'otlp'
+            # - name: 'NODE_OPTIONS'
+            #   value: '--require @opentelemetry/auto-instrumentations-node/register'
+            # - name: 'OTEL_RESOURCE_ATTRIBUTES'
+            #   value: 'service.instance.id=console-frontend'
+            # - name: 'OTEL_NODE_RESOURCE_DETECTORS'
+            #   value: 'env,host,os'
           envFrom:
             - secretRef:
                 name: '{{ .Release.Name }}'
