fix: update lint-staged configuration to include gql files and remove unused AppUtilization fragment

--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
 		}
 	},
 	"lint-staged": {
-		"*.{js,ts,svelte,css,md,json}": "prettier --write .",
-		"*.{js,ts,svelte}": [
+		"*.{js,ts,svelte,gql,css,md,json}": "prettier --write .",
+		"*.{js,ts,svelte,gql}": [
 			"eslint --fix .",
 			"svelte-check --tsconfig ./tsconfig.json --fail-on-warnings"
 		]
