Allow targeting external API server

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ VITE_API_USER_EMAIL="dev.usersen@example.com"
 TENANT_NAME="nav"
 SLACK_API_TOKEN=token
 SLACK_FEEDBACK_CHANNEL_ID="channel_id"
+# VITE_GRAPHQL_ENDPOINT="https://console.tenant.cloud.nais.io/graphql"
+# VITE_PROXY_ENDPOINT="https://console.tenant.cloud.nais.io"
