--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"prepare": "husky",
+		"prepare": "husky && svelte-kit sync || echo ''",
 		"dev": "vite dev",
 		"dev-live-share": "vite dev --host ::",
 		"build": "vite build",
@@ -31,8 +31,8 @@
 		"@storybook/sveltekit": "^8.6.12",
 		"@storybook/test": "^8.6.12",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.18.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/kit": "^2.20.3",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/amplitude-js": "^8.16.5",
 		"@types/luxon": "^3.6.2",
 		"@typescript-eslint/eslint-plugin": "^8.29.0",
@@ -54,8 +54,8 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.29.0",
-		"vite": "^5.0.0",
-		"vitest": "^3.0.7"
+		"vite": "^6.2.5",
+		"vitest": "^3.1.1"
 	},
 	"type": "module",
 	"dependencies": {
