--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@eslint/compat": "^1.2.8",
 		"@nais/ds-svelte-community": "^1.0.0-next.28",
 		"@navikt/ds-css": "^7.18.0",
+		"@navikt/ds-tokens": "^7.18.0",
 		"@storybook/addon-essentials": "^8.6.12",
 		"@storybook/addon-interactions": "^8.6.12",
 		"@storybook/addon-svelte-csf": "^5.0.0-next.27",
