--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@storybook/addon-essentials": "^8.6.12",
 		"@storybook/addon-interactions": "^8.6.12",
 		"@storybook/addon-svelte-csf": "^5.0.0-next.27",
+		"@storybook/addon-themes": "^8.6.12",
 		"@storybook/blocks": "^8.6.12",
 		"@storybook/svelte": "^8.6.12",
 		"@storybook/sveltekit": "^8.6.12",
