--- a/package.json
+++ b/package.json
@@ -43,19 +43,19 @@
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-storybook": "^0.12.0",
 		"eslint-plugin-svelte": "^3.5.1",
-		"houdini": "^1.5.5",
-		"houdini-svelte": "^2.1.14",
+		"houdini": "^2.0.0-next.0",
+		"houdini-svelte": "^2.2.0-next.1",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"storybook": "^8.6.12",
-		"svelte": "^5.28.1",
+		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.6",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.0",
-		"vite": "^6.3.2",
+		"vite": "^6.3.3",
 		"vitest": "^3.1.2"
 	},
 	"type": "module",
