feat: implement pricing store and integrate with API for dynamic pricing retrieval

--- a/charts/templates/fqdn.yaml
+++ b/charts/templates/fqdn.yaml
@@ -10,6 +10,7 @@ spec:
       to:
         - fqdns:
             - slack.com
+            - googleapis.com
   podSelector:
     matchLabels:
       app: '{{ .Release.Name }}'
