feat: add service account configuration to Helm chart

--- a/charts/Feature.yaml
+++ b/charts/Feature.yaml
@@ -27,3 +27,9 @@ values:
     computed:
       template: |
         {{ .Env.teams_github_org | quote }}
+  serviceaccount.email:
+    displayName: GCP SA email
+    description: Console service account email
+    computed:
+      template: |
+        {{.Env.console_serviceaccount_email | quote}}
