--- a/charts/templates/serviceaccount.yaml
+++ b/charts/templates/serviceaccount.yaml
@@ -1,8 +1,8 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: "{{ .Release.Name }}"
+  name: '{{ .Release.Name }}'
   annotations:
-    iam.gke.io/gcp-service-account: "{{ .Values.serviceaccount.email }}"
+    iam.gke.io/gcp-service-account: '{{ .Values.serviceaccount.email }}'
   labels:
-    app: "{{ .Release.Name }}"
+    app: '{{ .Release.Name }}'
