--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@storybook/sveltekit": "^8.6.14",
 		"@storybook/test": "^8.6.14",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/kit": "2.21.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/amplitude-js": "^8.16.5",
 		"@types/luxon": "^3.6.2",
@@ -50,7 +50,7 @@
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
 		"storybook": "^8.6.14",
-		"svelte": "^5.32.1",
+		"svelte": "5.31.1",
 		"svelte-check": "^4.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
