--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SLACK_API_TOKEN=token
 SLACK_FEEDBACK_CHANNEL_ID="channel_id"
 # VITE_GRAPHQL_ENDPOINT="https://console.tenant.cloud.nais.io/graphql"
 # VITE_PROXY_ENDPOINT="https://console.tenant.cloud.nais.io"
+# Requires 'nais alpha api proxy' to be running
+VITE_GRAPHQL_ENDPOINT="http://localhost:4242/graphql"
+VITE_PROXY_ENDPOINT="http://localhost:4242"
