chore: update dependencies and scripts in package.json
- Upgraded @chromatic-com/storybook to version 4.0.1
- Updated @storybook/addon-svelte-csf to version 5.0.4
- Updated @storybook/addon-themes to version 9.0.15
- Updated @storybook/sveltekit to version 9.0.15
- Updated eslint-plugin-storybook to version 9.0.15
- Updated storybook to version 9.0.15
- Added @storybook/addon-docs as a new dependency

--- a/package.json
+++ b/package.json
@@ -19,18 +19,13 @@
 		"lint-staged": "lint-staged"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.6",
+		"@chromatic-com/storybook": "^4.0.1",
 		"@eslint/compat": "^1.2.9",
 		"@nais/ds-svelte-community": "^1.0.1",
 		"@navikt/ds-css": "7.22.0",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-interactions": "^8.6.14",
-		"@storybook/addon-svelte-csf": "^5.0.1",
-		"@storybook/addon-themes": "^8.6.14",
-		"@storybook/blocks": "^8.6.14",
-		"@storybook/svelte": "^8.6.14",
-		"@storybook/sveltekit": "^8.6.14",
-		"@storybook/test": "^8.6.14",
+		"@storybook/addon-svelte-csf": "^5.0.4",
+		"@storybook/addon-themes": "^9.0.15",
+		"@storybook/sveltekit": "^9.0.15",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "2.21.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -41,7 +36,7 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^9.27.0",
 		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-storybook": "^0.12.0",
+		"eslint-plugin-storybook": "^9.0.15",
 		"eslint-plugin-svelte": "^3.8.2",
 		"houdini": "^2.0.0-next.0",
 		"houdini-svelte": "^2.2.0-next.1",
@@ -49,14 +44,15 @@
 		"lint-staged": "^16.0.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
-		"storybook": "^8.6.14",
+		"storybook": "^9.0.15",
 		"svelte": "5.31.1",
 		"svelte-check": "^4.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
-		"vitest": "^3.1.4"
+		"vitest": "^3.1.4",
+		"@storybook/addon-docs": "^9.0.15"
 	},
 	"type": "module",
 	"dependencies": {
