--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"@types/sortablejs": "^1.15.8",
 		"@typescript-eslint/eslint-plugin": "^8.44.0",
 		"@typescript-eslint/parser": "^8.44.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"@types/d3-array": "^3.2.1",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -49,6 +51,7 @@
 		"storybook": "^9.1.7",
 		"svelte": "5.39.4",
 		"svelte-check": "^4.3.1",
+		"tailwindcss": "^4.1.11",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.0",
@@ -68,12 +71,14 @@
 		"bytes-iec": "^3.1.1",
 		"cron-parser": "^5.4.0",
 		"cronstrue": "^3.3.0",
+		"d3-scale": "^4.0.2",
 		"echarts": "^6.0.0",
 		"eslint-plugin-unicorn": "^61.0.2",
 		"graphql": "^16.11.0",
 		"graphql-sse": "^2.5.4",
 		"luxon": "^3.7.2",
 		"pretty-bytes": "^7.1.0",
+		"layerchart": "^2.0.0-next.39",
 		"sortablejs": "^1.15.6",
 		"svelte-floating-ui": "^1.6.2",
 		"svelte-highlight": "^7.8.4"
