--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@eslint/compat": "^1.3.1",
 		"@nais/ds-svelte-community": "^1.0.1",
 		"@navikt/ds-css": "7.22.0",
+		"@storybook/addon-docs": "^9.0.18",
 		"@storybook/addon-svelte-csf": "^5.0.7",
 		"@storybook/addon-themes": "^9.0.18",
 		"@storybook/sveltekit": "^9.0.18",
@@ -31,6 +32,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@types/amplitude-js": "^8.16.5",
 		"@types/luxon": "^3.7.0",
+		"@types/sortablejs": "^1.15.8",
 		"@typescript-eslint/eslint-plugin": "^8.38.0",
 		"@typescript-eslint/parser": "^8.38.0",
 		"date-fns": "^4.1.0",
@@ -51,8 +53,7 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.38.0",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.4",
-		"@storybook/addon-docs": "^9.0.18"
+		"vitest": "^3.2.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -68,6 +69,7 @@
 		"graphql-sse": "^2.5.4",
 		"luxon": "^3.7.1",
 		"pretty-bytes": "^7.0.0",
+		"sortablejs": "^1.15.6",
 		"svelte-floating-ui": "^1.6.2",
 		"svelte-highlight": "^7.8.3"
 	},
