fix: update .env.example for local development and remove unnecessary tunnel script

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ VITE_API_USER_EMAIL="dev.usersen@example.com"
 TENANT_NAME="nav"
 SLACK_API_TOKEN=token
 SLACK_FEEDBACK_CHANNEL_ID="channel_id"
-# VITE_GRAPHQL_ENDPOINT="https://console.tenant.cloud.nais.io/graphql"
-# VITE_PROXY_ENDPOINT="https://console.tenant.cloud.nais.io"
 # Requires 'nais alpha api proxy' to be running
 VITE_GRAPHQL_ENDPOINT="http://localhost:4242/graphql"
 VITE_PROXY_ENDPOINT="http://localhost:4242"
+# Requires nais-api running locally
+# VITE_GRAPHQL_ENDPOINT="http://localhost:3000/graphql"
+# VITE_PROXY_ENDPOINT="http://localhost:3000"
