--- a/.graphqlrc.yaml
+++ b/.graphqlrc.yaml
@@ -2,8 +2,8 @@ projects:
   default:
     schema:
       - ./schema.graphql
-      - ./$houdini/graphql/schema.graphql
+      - ./.houdini/graphql/schema.graphql
     documents:
       - '**/*.gql'
       - '**/*.svelte'
-      - ./$houdini/graphql/documents.gql
+      - ./.houdini/graphql/documents.gql
