--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codemirror/language": "^6.11.3",
+		"@codemirror/state": "^6.5.2",
+		"@codemirror/theme-one-dark": "^6.1.3",
+		"@codemirror/view": "^6.38.1",
+		"@prometheus-io/codemirror-promql": "^0.306.0-rc.0",
 		"@slack/types": "^2.16.0",
 		"@slack/web-api": "^7.10.0",
 		"amplitude-js": "^8.21.9",
