Revert .vscode changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,5 @@
 			"source.organizeImports": "explicit"
 		}
 	},
-	"editor.insertSpaces": false,
-	"cSpell.enabled": false
+	"editor.insertSpaces": false
 }
