feat(opensearch, valkey): update endpoints and enhance delete confirmation messages

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ SLACK_FEEDBACK_CHANNEL_ID="channel_id"
 # Requires 'nais alpha api proxy' to be running
 VITE_GRAPHQL_ENDPOINT="http://localhost:4242/graphql"
 VITE_PROXY_ENDPOINT="http://localhost:4242"
+VITE_SCHEMA_ENDPOINT="http://localhost:4242/graphql"
 # Requires nais-api running locally
-# VITE_GRAPHQL_ENDPOINT="http://localhost:3000/graphql"
+# VITE_GRAPHQL_ENDPOINT="http://localhost:5173/graphql"
 # VITE_PROXY_ENDPOINT="http://localhost:3000"
+# VITE_SCHEMA_ENDPOINT="http://localhost:3000/graphql"
