--- a/package.json
+++ b/package.json
@@ -36,23 +36,23 @@
 		"@typescript-eslint/eslint-plugin": "^8.44.0",
 		"@typescript-eslint/parser": "^8.44.0",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.35.0",
+		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-storybook": "^9.1.7",
-		"eslint-plugin-svelte": "^3.12.3",
+		"eslint-plugin-svelte": "^3.12.4",
 		"houdini": "^2.0.0-next.10",
 		"houdini-svelte": "^3.0.0-next.13",
 		"husky": "^9.1.7",
-		"lint-staged": "^16.1.6",
+		"lint-staged": "^16.2.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"storybook": "^9.1.7",
-		"svelte": "5.39.2",
+		"svelte": "5.39.4",
 		"svelte-check": "^4.3.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.0",
-		"vite": "^7.1.6",
+		"vite": "^7.1.7",
 		"vitest": "^3.2.4"
 	},
 	"type": "module",
@@ -61,7 +61,7 @@
 		"@codemirror/state": "^6.5.2",
 		"@codemirror/theme-one-dark": "^6.1.3",
 		"@codemirror/view": "^6.38.2",
-		"@prometheus-io/codemirror-promql": "^0.306.0-rc.1",
+		"@prometheus-io/codemirror-promql": "^0.306.0",
 		"@slack/types": "^2.16.0",
 		"@slack/web-api": "^7.10.0",
 		"amplitude-js": "^8.21.9",
@@ -73,7 +73,7 @@
 		"graphql": "^16.11.0",
 		"graphql-sse": "^2.5.4",
 		"luxon": "^3.7.2",
-		"pretty-bytes": "^7.0.1",
+		"pretty-bytes": "^7.1.0",
 		"sortablejs": "^1.15.6",
 		"svelte-floating-ui": "^1.6.2",
 		"svelte-highlight": "^7.8.4"
