--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -55,10 +55,10 @@ spec:
               protocol: TCP
           resources:
             requests:
-              cpu: 100m
-              memory: 32Mi
+              cpu: "{{ .Values.resources.requests.cpu }}"
+              memory: "{{ .Values.resources.requests.memory }}"
             limits:
-              memory: 512Mi
+              memory: "{{ .Values.resources.limits.memory }}"
           livenessProbe:
             httpGet:
               path: /isAlive
