--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: '{{ .Release.Name }}'
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: '{{ .Release.Name }}'
@@ -55,10 +55,10 @@ spec:
               protocol: TCP
           resources:
             requests:
-              cpu: "{{ .Values.resources.requests.cpu }}"
-              memory: "{{ .Values.resources.requests.memory }}"
+              cpu: '{{ .Values.resources.requests.cpu }}'
+              memory: '{{ .Values.resources.requests.memory }}'
             limits:
-              memory: "{{ .Values.resources.limits.memory }}"
+              memory: '{{ .Values.resources.limits.memory }}'
           livenessProbe:
             httpGet:
               path: /isAlive
