feat: add replica count configuration and update PrometheusChart for browser context

--- a/charts/Feature.yaml
+++ b/charts/Feature.yaml
@@ -39,3 +39,7 @@ values:
     displayName: Memory limits
     config:
       type: string
+  replicaCount:
+    displayName: Number of replicas
+    config:
+      type: int
