feat: add houdini-directives for GraphQL validation

--- a/.graphqlrc.yaml
+++ b/.graphqlrc.yaml
@@ -3,6 +3,7 @@ projects:
     schema:
       - ./schema.graphql
       - ./.houdini/graphql/schema.graphql
+      - ./houdini-directives.graphql
     documents:
       - '**/*.gql'
       - '**/*.svelte'
