--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.1.2",
 		"@eslint/compat": "^1.4.1",
+		"@eslint/js": "^9.39.1",
+		"@layerstack/utils": "^2.0.0-next.14",
 		"@nais/ds-svelte-community": "^2.0.0-next.4",
-		"@navikt/ds-tailwind": "^7.33.2",
 		"@storybook/addon-docs": "^10.0.7",
 		"@storybook/addon-svelte-csf": "^5.0.10",
 		"@storybook/addon-themes": "^10.0.7",
@@ -30,17 +31,16 @@
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "2.48.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@types/amplitude-js": "^8.16.5",
+		"@tailwindcss/vite": "^4.1.17",
 		"@types/d3-array": "^3.2.2",
 		"@types/d3-time": "^3.0.4",
 		"@types/luxon": "^3.7.1",
 		"@types/sortablejs": "^1.15.9",
-		"@tailwindcss/vite": "^4.1.17",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "^10.0.7",
 		"eslint-plugin-svelte": "^3.13.0",
+		"globals": "^16.5.0",
 		"houdini": "^2.0.0-next.11",
 		"houdini-svelte": "^3.0.0-next.13",
 		"husky": "^9.1.7",
@@ -52,7 +52,6 @@
 		"svelte": "5.43.6",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
-		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.4",
 		"vite": "^7.2.2",
@@ -67,11 +66,8 @@
 		"@prometheus-io/codemirror-promql": "^0.307.3",
 		"@slack/types": "^2.18.0",
 		"@slack/web-api": "^7.12.0",
-		"amplitude-js": "^8.21.9",
-		"bytes-iec": "^3.1.1",
 		"cron-parser": "^5.4.0",
 		"cronstrue": "^3.9.0",
-		"d3-scale": "^4.0.2",
 		"eslint-plugin-unicorn": "^62.0.0",
 		"graphql": "^16.12.0",
 		"graphql-sse": "^2.6.0",
@@ -79,7 +75,6 @@
 		"luxon": "^3.7.2",
 		"pretty-bytes": "^7.1.0",
 		"sortablejs": "^1.15.6",
-		"svelte-floating-ui": "^1.6.2",
 		"svelte-highlight": "^7.9.0"
 	},
 	"overrides": {
