Add script trying to identify unused .gql files

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"lint-staged": "lint-staged"
+		"lint-staged": "lint-staged",
+		"find-unused-gql": "node find-unused-gql.mjs"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.1.2",
