chore: update dependencies and scripts in package.json
- Bump versions for several devDependencies including Storybook and Svelte.
- Add eslint-plugin-storybook for improved linting support.
- Minor updates to script commands for consistency.

--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
 		"unused": "node find-unused-gql.mjs && echo '---' && node find-missing-css-vars.mjs"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^4.1.2",
+		"@chromatic-com/storybook": "^4.1.3",
 		"@eslint/compat": "^2.0.0",
 		"@eslint/js": "^9.39.1",
 		"@layerstack/utils": "^2.0.0-next.14",
 		"@nais/ds-svelte-community": "^2.0.0-next.4",
-		"@storybook/addon-docs": "^10.0.7",
+		"@storybook/addon-docs": "^10.0.8",
 		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-themes": "^10.0.7",
-		"@storybook/sveltekit": "^10.0.7",
+		"@storybook/addon-themes": "^10.0.8",
+		"@storybook/sveltekit": "^10.0.8",
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -49,14 +49,15 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
-		"storybook": "^10.0.7",
-		"svelte": "5.43.8",
+		"storybook": "^10.0.8",
+		"svelte": "5.43.12",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.4",
+		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.2",
-		"vitest": "^4.0.9"
+		"vitest": "^4.0.10",
+		"eslint-plugin-storybook": "10.0.8"
 	},
 	"type": "module",
 	"dependencies": {
